# androidelf

./: .gitignore  README.md  installcmd.bat  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/androidelf/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/TestModule/: CMakeLists.txt  TestModule.cpp
app/src/main/cpp/elfgothook/: CMakeLists.txt  elfgothook.cpp
app/src/main/cpp/elfloader/: CMakeLists.txt  elfloader.cpp
app/src/main/cpp/elfmodify/: CMakeLists.txt  elfmodify.cpp
app/src/main/cpp/elfxhook/: CMakeLists.txt  main.cpp
app/src/main/cpp/elfxhook/xhook/: xh_core.cpp  xh_elf.cpp  xh_elf.h  xh_util.cpp  xhook.h
app/src/main/cpp/exectest/: CMakeLists.txt  PrintLog.h  exectest.cpp
app/src/main/cpp/native-lib/: native-lib.cpp
app/src/main/java/com/example/androidelf/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidelf/: ExampleUnitTest.java
doc/: 参考资料.md  调试技巧.md
gradle/wrapper/: gradle-wrapper.properties
